...
                          ),
                        ),
                      ),
                      Align(
                        alignment: const AlignmentDirectional(-0.7, 0.0),
                        child: Text(
                          'Available bags',
                          textAlign: TextAlign.start,
                          style:
                              FlutterFlowTheme.of(context).bodyMedium.override(
                                    fontFamily: 'Readex Pro',
                                    color: const Color(0xFF4FAA84),
                                    fontSize: 30.0,
...
