import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:sobra_sphere/flutter_flow/flutter_flow_icon_button.dart';
import 'package:sobra_sphere/flutter_flow/flutter_flow_widgets.dart';
import 'package:sobra_sphere/flutter_flow/flutter_flow_theme.dart';
import 'package:sobra_sphere/index.dart';
import 'package:sobra_sphere/main.dart';
import 'package:sobra_sphere/flutter_flow/flutter_flow_util.dart';

import 'package:provider/provider.dart';
import 'package:sobra_sphere/backend/firebase/firebase_config.dart';
import 'package:sobra_sphere/auth/firebase_auth/auth_util.dart';
import 'package:firebase_auth/firebase_auth.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    _overrideOnError();
    await initFirebase();
  });

  setUp(() async {
    await authManager.signOut();
    FFAppState.reset();
    final appState = FFAppState();
    await appState.initializePersistedState();
  });

  group('LOGIN', () {
    group('Buyer Login', () {
      testWidgets('Buyer Login Successful', (WidgetTester tester) async {
        await tester.pumpWidget(ChangeNotifierProvider(
          create: (context) => FFAppState(),
          child: MyApp(
            entryPage: LoginPageWidget(),
          ),
        ));

        await tester.pumpAndSettle();
        await tester.enterText(
            find.byKey(ValueKey('TextField_7ihj')), 'testbuy@test.com');
        await tester.enterText(
            find.byKey(ValueKey('TextField_2ryg')), 'testbuy');
        await tester.tap(find.byKey(ValueKey('Button_8o3w')));
        await tester.pumpAndSettle();
        expect(find.text('Available bags'), findsWidgets);
      });

      testWidgets('Buyer Login Failure', (WidgetTester tester) async {
        await tester.pumpWidget(ChangeNotifierProvider(
          create: (context) => FFAppState(),
          child: MyApp(
            entryPage: LoginPageWidget(),
          ),
        ));

        await tester.pumpAndSettle();
        await tester.enterText(find.byKey(ValueKey('TextField_7ihj')),
            'veryfakeemail@notreal.com');
        await tester.enterText(
            find.byKey(ValueKey('TextField_2ryg')), '12345678');
        await tester.tap(find.byKey(ValueKey('Button_8o3w')));
        await tester.pumpAndSettle();
        expect(find.text('Welcome back!'), findsWidgets);
      });
    });

    group('Seller Login', () {
      testWidgets('Seller Login Success', (WidgetTester tester) async {
        await tester.pumpWidget(ChangeNotifierProvider(
          create: (context) => FFAppState(),
          child: MyApp(
            entryPage: LoginPageSellerWidget(),
          ),
        ));
      });
    });
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }

  return false;
}
